--- a/ExperimentRunning.ipynb
+++ b/ExperimentRunning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
     "        if filename.endswith('cat.csv'): \n",
     "            list_of_files.append(int(filename[:-7]))\n",
     "set_of_filesDone = []\n",
-    "func = 'cvScoreNoise6'\n",
+    "func = v'cvScoreNoise6'\n",
     "clfName = 'AdaBoost'\n",
     "amount = 4\n",
     "path =  'D:\\\\DropboxFolder\\\\Dropbox\\\\afstudeer\\\\results\\\\' + func + '\\\\' + clfName + '\\\\' + str(amount) + '\\\\'\n",
@@ -1380,30 +1380,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "12.039095209816324\n",
-      "3\n",
-      "9.772067066210179\n",
-      "3\n",
-      "9.80274004682748\n",
-      "3\n",
-      "10.495103827043408\n",
-      "3\n",
-      "10.401232405289576\n",
-      "3\n",
-      "10.53298146633744\n",
-      "3\n",
-      "12.602055035120614\n",
-      "3\n",
-      "10.511612870420166\n",
-      "3\n",
-      "10.82142438957031\n",
-      "3\n",
-      "11.209610596688862\n",
-      "3\n",
-      "11.140290714788534\n",
-      "3\n",
-      "10.612071768551516\n"
+      "12\n",
+      "48.07233908359392\n",
+      "14\n",
+      "24.041088106855106\n",
+      "16\n",
+      "22.485946857011967\n",
+      "18\n",
+      "12.274277586485994\n",
+      "22\n",
+      "22.893946341993626\n",
+      "28\n",
+      "91.19578394047807\n",
+      "30\n",
+      "116.69844463529566\n",
+      "32\n",
+      "265.8334690076987\n",
+      "36\n",
+      "14.931803455194654\n",
+      "37\n",
+      "3.2692640882472688\n",
+      "12\n",
+      "46.191338175314286\n",
+      "14\n",
+      "23.517975959279966\n",
+      "16\n",
+      "22.746585321137786\n",
+      "18\n",
+      "12.454960853474972\n",
+      "22\n",
+      "24.171449790610495\n",
+      "28\n",
+      "96.92843950843735\n",
+      "30\n",
+      "122.53375026182425\n",
+      "32\n",
+      "277.7258213119626\n",
+      "36\n",
+      "15.112253004623653\n",
+      "37\n",
+      "3.3502138678948086\n",
+      "12\n",
+      "46.57748110316561\n",
+      "14\n",
+      "23.989265786314945\n",
+      "16\n",
+      "22.650688813699162\n",
+      "18\n",
+      "12.307337191927672\n",
+      "22\n",
+      "23.402081439140375\n",
+      "28\n",
+      "98.19839401981608\n",
+      "30\n",
+      "122.14575532057324\n",
+      "32\n",
+      "279.19659565415964\n",
+      "36\n",
+      "15.063692466877\n",
+      "37\n",
+      "3.229276459883522\n"
      ]
     }
    ],
@@ -1415,10 +1451,11 @@
     "amount = 1\n",
     "amountList = [0,0.25, 0.5,0.75]\n",
     "# NonCat = [20, 21, 26, 333, 334, 335, 40668, 4135, 4534, 469, 46, 50]\n",
-    "NonCat = [3]\n",
-    "amountList = [0.5,0.6,0.7,0.75,0.8,0.9,1,2,3,4,5,6]\n",
+    "# NonCat = [3]\n",
+    "amountList = [0.6,0.8,0.9]\n",
     "# NonCat = [12,14,16,18,22,28,30,32,36,37]\n",
     "# amountList = [0.7]\n",
+    "NonCat = [12,14,16,18,22,28,30,32,36,37]\n",
     "for amount in amountList:\n",
     "    for did in NonCat:\n",
     "        print(did)\n",
@@ -1429,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1954,6 +1991,393 @@
     " 164,\n",
     " 184,\n",
     " 23499]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1038\n",
+      "343.89160636738234\n",
+      "1043\n",
+      "35.57742698891889\n",
+      "1046\n",
+      "466.4997585851561\n",
+      "1049\n",
+      "6.316119560760853\n",
+      "1050\n",
+      "6.821453779204603\n",
+      "1063\n",
+      "2.6733034367680375\n",
+      "1067\n",
+      "6.628557020318112\n",
+      "1068\n",
+      "4.365445628478483\n",
+      "1120\n",
+      "805.7404876719811\n",
+      "1176\n",
+      "158.00708803314774\n",
+      "11\n",
+      "2.14426204729898\n",
+      "12\n",
+      "44.62064654394271\n",
+      "1459\n",
+      "90.20338092743259\n",
+      "1462\n",
+      "2.9348254559008637\n",
+      "1464\n",
+      "2.3118184112536255\n",
+      "1466\n",
+      "16.99404696649799\n",
+      "1467\n",
+      "3.0608150818261493\n",
+      "1468\n",
+      "41.82803099253215\n",
+      "1475\n",
+      "69.02680101305668\n",
+      "1476\n",
+      "1031.8669340034794\n",
+      "1478\n",
+      "1130.8923555697802\n",
+      "1479\n",
+      "14.728213534810493\n",
+      "1485\n",
+      "125.05836594571883\n",
+      "1487\n",
+      "19.999018013048044\n",
+      "1489\n",
+      "11.883459840933938\n",
+      "1491\n",
+      "16.956957715781755\n",
+      "1492\n",
+      "23.446866108759423\n",
+      "1493\n",
+      "17.910766542281635\n",
+      "1494\n",
+      "4.202126036743721\n",
+      "1497\n",
+      "26.400212165164703\n",
+      "14\n",
+      "24.12333989390754\n",
+      "1501\n",
+      "19.934356154772104\n",
+      "1504\n",
+      "9.479694329154881\n",
+      "1510\n",
+      "3.249882324842474\n",
+      "1515\n",
+      "29.39911355267759\n",
+      "1570\n",
+      "24.832384856781573\n",
+      "16\n",
+      "22.50088472126299\n",
+      "18\n",
+      "9.253904972585588\n",
+      "22\n",
+      "20.102185422463663\n",
+      "28\n",
+      "92.33714434461945\n",
+      "300\n",
+      "796.838761940704\n",
+      "30\n",
+      "82.48253299453063\n",
+      "32\n",
+      "216.7702458419517\n",
+      "36\n",
+      "13.050614546562429\n",
+      "375\n",
+      "74.37437681148367\n",
+      "37\n",
+      "2.945949198852759\n",
+      "39\n",
+      "2.0649935412802733\n",
+      "40499\n",
+      "33.2712737793554\n",
+      "40509\n",
+      "2.5126037209120113\n",
+      "40\n",
+      "2.7048753669660073\n",
+      "4134\n",
+      "591.5973335672024\n",
+      "41\n",
+      "1.584417523132288\n",
+      "44\n",
+      "28.903853913929197\n",
+      "4538\n",
+      "140.46905341589445\n",
+      "458\n",
+      "5.491256117587909\n",
+      "53\n",
+      "1.6145656888620579\n",
+      "54\n",
+      "4.01609385649499\n",
+      "1038\n",
+      "340.0880401453105\n",
+      "1043\n",
+      "35.527751511122915\n",
+      "1046\n",
+      "465.4184640604435\n",
+      "1049\n",
+      "6.329201213091437\n",
+      "1050\n",
+      "6.831822721731442\n",
+      "1063\n",
+      "2.627957565098768\n",
+      "1067\n",
+      "6.6468345732209855\n",
+      "1068\n",
+      "4.223411128783482\n",
+      "1120\n",
+      "801.8226018409114\n",
+      "1176\n",
+      "157.7614578750945\n",
+      "11\n",
+      "2.0850643283120007\n",
+      "12\n",
+      "44.576890044983884\n",
+      "1459\n",
+      "90.95725114561355\n",
+      "1462\n",
+      "3.1252684136561584\n",
+      "1464\n",
+      "2.6531808680083486\n",
+      "1466\n",
+      "16.387107654227293\n",
+      "1467\n",
+      "3.0583300250582397\n",
+      "1468\n",
+      "42.114790309628006\n",
+      "1475\n",
+      "69.78738512968266\n",
+      "1476\n",
+      "1032.8875711240762\n",
+      "1478\n",
+      "1164.202146096337\n",
+      "1479\n",
+      "14.92374509765068\n",
+      "1485\n",
+      "128.99780277504033\n",
+      "1487\n",
+      "20.000303692875605\n",
+      "1489\n",
+      "11.853071893106971\n",
+      "1491\n",
+      "17.09142321865511\n",
+      "1492\n",
+      "23.475173457154597\n",
+      "1493\n",
+      "17.87845567274053\n",
+      "1494\n",
+      "4.333723484596703\n",
+      "1497\n",
+      "26.782415016146842\n",
+      "14\n",
+      "24.12418846126093\n",
+      "1501\n",
+      "20.007204658679257\n",
+      "1504\n",
+      "9.446013809400029\n",
+      "1510\n",
+      "3.6261125492310384\n",
+      "1515\n",
+      "29.264470779002295\n",
+      "1570\n",
+      "24.454918868286768\n",
+      "16\n",
+      "22.49044440391299\n",
+      "18\n",
+      "9.190583841387706\n",
+      "22\n",
+      "20.24051916087774\n",
+      "28\n",
+      "92.6959558465096\n",
+      "300\n",
+      "806.5077213097757\n",
+      "30\n",
+      "83.70377862048917\n",
+      "32\n",
+      "217.48967887394247\n",
+      "36\n",
+      "12.884371386069688\n",
+      "375\n",
+      "74.64863900339697\n",
+      "37\n",
+      "2.9300008910213364\n",
+      "39\n",
+      "2.045822636828234\n",
+      "40499\n",
+      "33.776902360637905\n",
+      "40509\n",
+      "2.517946103143913\n",
+      "40\n",
+      "2.6668204568632063\n",
+      "4134\n",
+      "593.0011461956965\n",
+      "41\n",
+      "1.567553938140918\n",
+      "44\n",
+      "28.911547933319525\n",
+      "4538\n",
+      "140.52147332564346\n",
+      "458\n",
+      "5.619348268555768\n",
+      "53\n",
+      "1.6123348757391796\n",
+      "54\n",
+      "3.8465711861208547\n",
+      "1038\n",
+      "341.04605961990455\n",
+      "1043\n",
+      "35.537611033330904\n",
+      "1046\n",
+      "460.09254002471425\n",
+      "1049\n",
+      "6.494039735720435\n",
+      "1050\n",
+      "6.7275898214793415\n",
+      "1063\n",
+      "2.6511119311180664\n",
+      "1067\n",
+      "6.706344382124371\n",
+      "1068\n",
+      "4.177838537085336\n",
+      "1120\n",
+      "788.22746409916\n",
+      "1176\n",
+      "157.7864390633913\n",
+      "11\n",
+      "2.13445150780899\n",
+      "12\n",
+      "44.67996415398375\n",
+      "1459\n",
+      "90.96069673024613\n",
+      "1462\n",
+      "3.0964418484072667\n",
+      "1464\n",
+      "2.6284795809697243\n",
+      "1466\n",
+      "16.324781572053325\n",
+      "1467\n",
+      "2.919184106460307\n",
+      "1468\n",
+      "41.96966196790163\n",
+      "1475\n",
+      "69.67739979184262\n",
+      "1476\n",
+      "1031.869021133949\n",
+      "1478\n",
+      "1179.443278240993\n",
+      "1479\n",
+      "14.539325428610027\n",
+      "1485\n",
+      "127.7095571821992\n",
+      "1487\n",
+      "20.09517389566463\n",
+      "1489\n",
+      "11.782160305985599\n",
+      "1491\n",
+      "17.016154035263753\n",
+      "1492\n",
+      "23.345371109426196\n",
+      "1493\n",
+      "17.968501310635475\n",
+      "1494\n",
+      "4.336883103431319\n",
+      "1497\n",
+      "26.456859050580533\n",
+      "14\n",
+      "23.85796643330832\n",
+      "1501\n",
+      "20.208416817775287\n",
+      "1504\n",
+      "9.41884985769866\n",
+      "1510\n",
+      "3.5259657410206273\n",
+      "1515\n",
+      "29.027139227095176\n",
+      "1570\n",
+      "24.837907308829017\n",
+      "16\n",
+      "22.33558062952943\n",
+      "18\n",
+      "9.238647087884601\n",
+      "22\n",
+      "19.94373051479488\n",
+      "28\n",
+      "92.84262271221814\n",
+      "300\n",
+      "809.7678400905424\n",
+      "30\n",
+      "82.22259241756547\n",
+      "32\n",
+      "216.62315399281215\n",
+      "36\n",
+      "12.906888510195131\n",
+      "375\n",
+      "75.22672842532484\n",
+      "37\n",
+      "2.972329427000659\n",
+      "39\n",
+      "2.059291952420608\n",
+      "40499\n",
+      "34.03205569288548\n",
+      "40509\n",
+      "2.491017735010246\n",
+      "40\n",
+      "2.6750658817618387\n",
+      "4134\n",
+      "593.811988451278\n",
+      "41\n",
+      "1.62113870367466\n",
+      "44\n",
+      "28.947254471771885\n",
+      "4538\n",
+      "140.9967223561398\n",
+      "458\n",
+      "5.63591329218616\n",
+      "53\n",
+      "1.6306324882316403\n",
+      "54\n",
+      "3.8522634449400357\n"
+     ]
+    }
+   ],
+   "source": [
+    "for amount in amountList:\n",
+    "    for did in NonCat:\n",
+    "        print(did)\n",
+    "        with stopwatch() as sw:\n",
+    "            cv_feature(did,cv,amount)\n",
+    "        print(sw.duration)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-7-08c6172b2615>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-7-08c6172b2615>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    amountList = [0.1.0.2,0.3]\u001b[0m\n\u001b[1;37m                      ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "amountList = [0.1,0.2,0.3]\n",
+    "for amount in amountList:\n",
+    "    for did in NonCat:\n",
+    "        print(did)\n",
+    "        with stopwatch() as sw:\n",
+    "            cv_feature(did,cv,amount)\n",
+    "        print(sw.duration)"
    ]
   },
   {
